--- a/About.html
+++ b/About.html
@@ -32,12 +32,12 @@ p {
     <i class="fa fa-remove"></i>
   </a>
   <h4 class="w3-bar-item"><b>Menu</b></h4>
-  <a class="w3-bar-item w3-button w3-hover-black" href="index.html">Home</a>
-  <a class="w3-bar-item w3-button w3-hover-black" href="tryuserinfo.html">User Details</a>
-  <a class="w3-bar-item w3-button w3-hover-black" href="trycontestinfo.html">Contest Details</a>
-  <a class="w3-bar-item w3-button w3-hover-black" href="tryblog.html">Blog Posts</a>
-  <a class="w3-bar-item w3-button w3-hover-black" href="tryproblem.html">Problem Set</a>
-  <a class="w3-bar-item w3-button w3-hover-black" href="tryavcontests.html">Available Contests</a>
+  <a class="w3-bar-item w3-button w3-hover-black" href="index.html">HOME</a>
+  <a class="w3-bar-item w3-button w3-hover-black" href="tryuserinfo.html">USER DETAILS</a>
+  <a class="w3-bar-item w3-button w3-hover-black" href="trycontestinfo.html">CONTEST DETAILS</a>
+  <a class="w3-bar-item w3-button w3-hover-black" href="tryblog.html">BLOG POST</a>
+  <a class="w3-bar-item w3-button w3-hover-black" href="tryproblem.html">PROBLEM SET</a>
+  <a class="w3-bar-item w3-button w3-hover-black" href="tryavcontests.html">AVAILABLE CONTEST</a>
 </nav>
 
 <div class="w3-overlay w3-hide-large" onclick="w3_close()" style="cursor:pointer" title="close side menu" id="myOverlay"></div>
